# wolf3d

./: CMakeLists.txt  Makefile  a.out  check.c  get_next_line.c  get_next_line.h  map  vis.c  wolf.c  wolf.h
lib/: libSDL2-2.0.0.dylib  libSDL_image-1.2.0.dylib
lib/cmake/SDL2/: sdl2-config.cmake
lib/pkgconfig/: SDL_image.pc  sdl2.pc
