cmake_minimum_required(VERSION 3.16)
project(wolf3d C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(include)
include_directories(include/SDL2)
include_directories(Libft)

add_executable(wolf3d
        include/SDL2/begin_code.h
        include/SDL2/close_code.h
        include/SDL2/SDL.h
        include/SDL2/SDL_assert.h
        include/SDL2/SDL_atomic.h
        include/SDL2/SDL_audio.h
        include/SDL2/SDL_bits.h
        include/SDL2/SDL_blendmode.h
        include/SDL2/SDL_clipboard.h
        include/SDL2/SDL_config.h
        include/SDL2/SDL_cpuinfo.h
        include/SDL2/SDL_egl.h
        include/SDL2/SDL_endian.h
        include/SDL2/SDL_error.h
        include/SDL2/SDL_events.h
        include/SDL2/SDL_filesystem.h
        include/SDL2/SDL_gamecontroller.h
        include/SDL2/SDL_gesture.h
        include/SDL2/SDL_haptic.h
        include/SDL2/SDL_hints.h
        include/SDL2/SDL_joystick.h
        include/SDL2/SDL_keyboard.h
        include/SDL2/SDL_keycode.h
        include/SDL2/SDL_loadso.h
        include/SDL2/SDL_log.h
        include/SDL2/SDL_main.h
        include/SDL2/SDL_messagebox.h
        include/SDL2/SDL_metal.h
        include/SDL2/SDL_mouse.h
        include/SDL2/SDL_mutex.h
        include/SDL2/SDL_name.h
        include/SDL2/SDL_opengl.h
        include/SDL2/SDL_opengl_glext.h
        include/SDL2/SDL_opengles.h
        include/SDL2/SDL_opengles2.h
        include/SDL2/SDL_opengles2_gl2.h
        include/SDL2/SDL_opengles2_gl2ext.h
        include/SDL2/SDL_opengles2_gl2platform.h
        include/SDL2/SDL_opengles2_khrplatform.h
        include/SDL2/SDL_pixels.h
        include/SDL2/SDL_platform.h
        include/SDL2/SDL_power.h
        include/SDL2/SDL_quit.h
        include/SDL2/SDL_rect.h
        include/SDL2/SDL_render.h
        include/SDL2/SDL_revision.h
        include/SDL2/SDL_rwops.h
        include/SDL2/SDL_scancode.h
        include/SDL2/SDL_sensor.h
        include/SDL2/SDL_shape.h
        include/SDL2/SDL_stdinc.h
        include/SDL2/SDL_surface.h
        include/SDL2/SDL_system.h
        include/SDL2/SDL_syswm.h
        include/SDL2/SDL_test.h
        include/SDL2/SDL_test_assert.h
        include/SDL2/SDL_test_common.h
        include/SDL2/SDL_test_compare.h
        include/SDL2/SDL_test_crc32.h
        include/SDL2/SDL_test_font.h
        include/SDL2/SDL_test_fuzzer.h
        include/SDL2/SDL_test_harness.h
        include/SDL2/SDL_test_images.h
        include/SDL2/SDL_test_log.h
        include/SDL2/SDL_test_md5.h
        include/SDL2/SDL_test_memory.h
        include/SDL2/SDL_test_random.h
        include/SDL2/SDL_thread.h
        include/SDL2/SDL_timer.h
        include/SDL2/SDL_touch.h
        include/SDL2/SDL_types.h
        include/SDL2/SDL_version.h
        include/SDL2/SDL_video.h
        include/SDL2/SDL_vulkan.h
        Libft/ft_atoi.c
        Libft/ft_bzero.c
        Libft/ft_isalnum.c
        Libft/ft_isalpha.c
        Libft/ft_isascii.c
        Libft/ft_isdigit.c
        Libft/ft_isprint.c
        Libft/ft_itoa.c
        Libft/ft_lstadd.c
        Libft/ft_lstdel.c
        Libft/ft_lstdelone.c
        Libft/ft_lstiter.c
        Libft/ft_lstmap.c
        Libft/ft_lstnew.c
        Libft/ft_memalloc.c
        Libft/ft_memccpy.c
        Libft/ft_memchr.c
        Libft/ft_memcmp.c
        Libft/ft_memcpy.c
        Libft/ft_memdel.c
        Libft/ft_memmove.c
        Libft/ft_memory.c
        Libft/ft_memset.c
        Libft/ft_nbrlen.c
        Libft/ft_new_copy.c
        Libft/ft_putchar.c
        Libft/ft_putchar_fd.c
        Libft/ft_putendl.c
        Libft/ft_putendl_fd.c
        Libft/ft_putnbr.c
        Libft/ft_putnbr_fd.c
        Libft/ft_putstr.c
        Libft/ft_putstr_fd.c
        Libft/ft_s.c
        Libft/ft_sizem.c
        Libft/ft_strcat.c
        Libft/ft_strchr.c
        Libft/ft_strclr.c
        Libft/ft_strcmp.c
        Libft/ft_strcpy.c
        Libft/ft_strdel.c
        Libft/ft_strdup.c
        Libft/ft_strequ.c
        Libft/ft_striter.c
        Libft/ft_striteri.c
        Libft/ft_strjoin.c
        Libft/ft_strlcat.c
        Libft/ft_strlen.c
        Libft/ft_strmap.c
        Libft/ft_strmapi.c
        Libft/ft_strncat.c
        Libft/ft_strncmp.c
        Libft/ft_strncpy.c
        Libft/ft_strnequ.c
        Libft/ft_strnew.c
        Libft/ft_strnstr.c
        Libft/ft_strrchr.c
        Libft/ft_strsplit.c
        Libft/ft_strstr.c
        Libft/ft_strsub.c
        Libft/ft_strtrim.c
        Libft/ft_tolower.c
        Libft/ft_toupper.c
        Libft/libft.h
        check.c
        get_next_line.c
        get_next_line.h
        vis.c
        wolf.c
        wolf.h)
